--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-spritesmith": "^1.1.0"
   },
   "dependencies": {
     "jquery": "^1.12.4"
